# youtube-get-subtitles

./: PLAN.md  README.md  bot.py  build.sh  copy-to-ec2.sh  fetch_subtitles.py  main.py  pyproject.toml  subtitle_pipeline.py  video_id.py
output/: Ft9m8znfdSM.srt  Ft9m8znfdSM.txt  Ycqtq6RFuAA.srt  Ycqtq6RFuAA.txt  o4_Etmw9Zy8.srt  o4_Etmw9Zy8.txt  oMwX3t38LoE.srt  oMwX3t38LoE.txt
youtube_get_subtitles.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
